--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             onmouseout="hideText(1)" 
             onclick="alertText(1)">
                 <span id="desc1" class="photo-description">
-                    첫번째 이미지 설명 
+                    첫번째 고백한날
                 </span>
             </div>
             <div id="image2" class="photo-frame" 
@@ -25,7 +25,7 @@
             onmouseout="hideText(2)" 
             onclick="alertText(2)">
                 <span id="desc2" class="photo-description">
-                    두번째 이미지 설명 
+                    두번째 하늘공원에서 
                 </span>
             </div>
             <div id="image3" class="photo-frame" 
@@ -33,7 +33,7 @@
             onmouseout="hideText(3)" 
             onclick="alertText(3)">
                 <span id="desc3" class="photo-description">
-                    세번째 이미지 설명
+                    세번째 영종도 데이트 
                 </span>
             </div>
             <div class="photo-frame">
